# Glogen

./: CMakeLists.txt  README.md
src/core/: BoundedEngine.h  CMakeLists.txt  Core.cpp  GlogenContext.h  GlogenEngine.h
